[package]
name = "tazui"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "Tazui is a terminal calculator"
repository = "https://github.com/BaGoA/Tazui"
readme = "README.md"
keywords = ["calculator", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taz = "1.0.0"
crossterm = "0.28.1"
