[package]
name = "tazui"
version = "2.0.1"
edition = "2021"
license-file = "LICENSE"
description = "Tazui is a terminal calculator"
repository = "https://github.com/BaGoA/Tazui"
readme = "README.md"
keywords = ["calculator", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taz = "2.0.0"
tazor = "1.0.2"
crossterm = "0.29.0"
